# mini2-AAA

./: .gitignore  README.md  mini2_presentation.pptx
config/: topology.conf  topology_allpy.conf
cpp/: CMakeLists.txt
cpp/include/: ChunkBuffer.hpp  Config.hpp  Indices.hpp  NodeServer.hpp  PartitionStore.hpp  PeerClient.hpp  QueryCache.hpp  QueryEngine.hpp  Record311.hpp  RequestRegistry.hpp
cpp/src/: ChunkBuffer.cpp  Config.cpp  Indices.cpp  NodeServer.cpp  PartitionStore.cpp  PeerClient.cpp  QueryCache.cpp  QueryEngine.cpp  RequestRegistry.cpp  client_main.cpp  server_main.cpp
docs/: ARCHITECTURE.md  CHUNKING.md  CONTRIBUTIONS.md  DEMO_GUIDE.md  DESIGN_RATIONALE.md  MINI2_EXPLAINED.md  RELATED_WORK.md  REPORT.md  RUNNING.md  SLIDE.md  TEAMGUIDE.md  index_bench.json  measurements.json
proto/: overlay.proto
python/: config_loader.py  node_server.py  partition_store.py
scripts/: bench_index.py  build_cpp.sh  gen_proto.sh  generate_synthetic.py  kill_all.sh  measure.py  partition_data.py  run_all_local.sh  run_client.sh  run_node.sh  smoke_test.sh
tests/: test_config_loader.py
